--- a/source/java/.classpath
+++ b/source/java/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/loader"/>
 	<classpathentry kind="lib" path="libs/lucee.jar"/>
 	<classpathentry kind="lib" path="libs/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="libs/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/org.apache.servicemix.bundles.dom4j-2.1.4_1.jar"/>
 	<classpathentry kind="lib" path="libs/javassist-3.9.0.GA.jar"/>
 	<classpathentry kind="lib" path="libs/jta-1.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/xml-apis-1.4.1.jar"/>
